realized marketing banners and rest api with swagger
